--- a/ReactChartBackend/package.json
+++ b/ReactChartBackend/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch db.json --port 5000"
+    "start": "node index.js"
   },
   "dependencies": {
     "json-server":"^0.17.3"
