--- a/ReactChartBackend/package.json
+++ b/ReactChartBackend/package.json
@@ -9,7 +9,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "json-server":"^0.17.3"
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "json-server": "^0.17.3"
   },
   "keywords": [],
   "author": "",
